--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,12 +6,11 @@ import InfoLayout from "../layouts/InfoLayout.astro";
 <InfoLayout>
      <div class="p-4 sm:pt-8 sm:px-12 pb-20 min-h-dvh flex flex-col justify-between gap-32">
          <div class="space-y-4 sm:space-y-12">
-               <H1> Amanda Helmer </H1>
-</div>
-               <p>
-                   I am a focused and disciplined professional with a strong commitment to clear results. My work reflects a practical approach to problem-solving and a steady drive to improve processes. I value efficiency, accuracy, and purpose in every project. My goal is to deliver work that is straightforward, reliable, and built on sound judgment, while continuing to expand my skills in a fast-moving digital environment.
-               </p>
-
-
+               <H1> About </H1>
+         </div>
+         <div class="sm:space-y-4">
+         <h2 class="text-3xl text-zinc-100"> Amanda Helmer</h2>
+         <p class="text-md text-zinc-400 text-balance"> I am a focused and disciplined professional with a strong commitment to clear results. My work reflects a practical approach to problem-solving and a steady drive to improve processes. I value efficiency, accuracy, and purpose in every project. My goal is to deliver work that is straightforward, reliable, and built on sound judgment, while continuing to expand my skills in a fast-moving digital environment.</p>
+         </div>
      </div>
 </InfoLayout>
