--- a/src/components/h1.astro
+++ b/src/components/h1.astro
@@ -10,13 +10,13 @@ const { size = "default", className } = Astro.props;
 ---
 
 <h1
-    class={clsx(
-        "text-white font-bold text-balance",
-        size === "default" && "text-4xl md:text-6xl xl:text-8xl tracking-tight",
-        size === "large" && "text-8xl md:text-[120px] lg:text-[160px] tracking-tighter",
-        size === "medium" && "text-6xl md:text-8xl lg:text-9xl tracking-tight",
-        className,
-    )}
+        class={clsx(
+            "text-white font-bold text-balance font-major-mono",
+            size === "default" && "text-4xl md:text-6xl xl:text-8xl tracking-tight",
+            size === "large" && "text-8xl md:text-[120px] lg:text-[160px] tracking-tighter",
+            size === "medium" && "text-6xl md:text-8xl lg:text-9xl tracking-tight",
+            className,
+        )}
 >
     <slot />
 </h1>
