--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -20,7 +20,8 @@ const defaultDescription = "Nikola Tesla was a Serbian-American inventor, electr
 		<title>{title ?? defaultTitle}</title>
 		<meta name="description" content={description ?? defaultDescription} />
 
-		<Font cssVariable="--font-manrope" preload />
+        <Font cssVariable="--font-manrope" preload />
+        <Font cssVariable="--font-major-mono" preload />
 		<ClientRouter />
 		<LoadingIndicator color="#f4f4f5" height="2px" />
 
