--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,9 @@ import AvailableForWork from "../components/available.astro";
 			</div>
 
 			<div class="p-4 sm:p-8 absolute w-full h-dvh flex flex-col justify-between z-10">
+
 				<div>
-					<H1 size="large"> AMANDA <br /> HELMER </H1>
+					<H1 size="default"> AMANDA HELMER </H1>
 				</div>
 
 				<div>
