--- a/src/layouts/InfoLayout.astro
+++ b/src/layouts/InfoLayout.astro
@@ -1,7 +1,7 @@
 ---
 import RootLayout from "./RootLayout.astro";
 import Footer from "../components/footer.astro";
-import WarpBackground from "../components/warp-background";
+import WarpBackground from "../components/warp-background.tsx";
 
 const { title, description } = Astro.props;
 
@@ -11,7 +11,11 @@ const pathname = Astro.url.pathname;
 <RootLayout title={title} description={description}>
 	<div class="flex relative gap-4 w-full max-w-screen-xl">
 		<nav class="relative w-4 md:min-w-2xs xl:min-w-sm sm:min-h-screen sm:ml-4 sm:pb-4">
-
+            <div class="w-full h-full max-sm:w-4 md:max-w-2xs xl:max-w-sm fixed -z-10 overflow-hidden">
+                <WarpBackground
+                        client:load
+                />
+                </div>
 		</nav>
 
 		<main class="relative"  >
