--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,19 +14,17 @@ import ExternalLink from "../components/external-link.astro";
                </p>
 
                <div class="mt-6 sm:mt-12 flex flex-col gap-1">
-                    <a href="mailto:helmeramanda90@gmail.com" class="mb-8 w-fit group flex items-center gap-1 text-base lg:text-xl text-zinc-400 hover:text-zinc-50">
-                         @gmail.com
-                         <svg xmlns="http://www.w3.org/2000/svg" class="-rotate-45 group-hover:rotate-0 transition-all duration-300 ease-in-out" width="24" height="24" viewBox="0 0 24 24">
-                              <title>Arrow Icon</title>
-                              <path fill="currentColor" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10" opacity=".5"/>
-                              <path fill="currentColor" d="M13.53 8.47a.75.75 0 1 0-1.06 1.06l1.72 1.72H8a.75.75 0 0 0 0 1.5h6.19l-1.72 1.72a.75.75 0 1 0 1.06 1.06l3-3a.75.75 0 0 0 0-1.06z"/>
-                         </svg>
-                    </a>
+                   <div>
+                       <ExternalLink href="mailto:helmeramanda90@gmail.com"> contact@amanda.com </ExternalLink>
+                       <ExternalLink href="tel:+15803607562"> +1 (580) 360-7562 </ExternalLink>
+                   </div>
+                   <div>
+                       <ExternalLink href="https://www.linkedin.com/in/helmera">LinkedIn</ExternalLink>
+                       <ExternalLink href="">Instagram</ExternalLink>
+                   </div>
 
-                    <ExternalLink href="https://www.linkedin.com/in/helmera">LinkedIn</ExternalLink>
-                    <ExternalLink href="">Instagram</ExternalLink>
 
                </div>
           </div>
-     </div>
+         </div>
 </InfoLayout>
