--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import H1 from "../components/h1.astro";
 import Link from "../components/link.astro";
 import Navigation from "../components/navigation";
 import RootLayout from "../layouts/RootLayout.astro";
-import WarpBackground from "../components/warp-background";
+import WarpBackground from "../components/warp-background.tsx";
 import AvailableForWork from "../components/available.astro";
 ---
 
@@ -11,22 +11,18 @@ import AvailableForWork from "../components/available.astro";
 	<main>
 		<div class="group relative w-full min-h-dvh flex items-center justify-center">
 			<div class="absolute w-full h-dvh -z-10">
-				<WarpBackground
-					color1="#09090b"
-					color2="#27272a"
-					color3="#52525b"
-					speed={0.6}
-					swirl={0.5}
-					swirlIterations={10}
-					shapeScale={0.3}
-					client:load
-				/>
+                <WarpBackground
+                        client:load
+                />
 			</div>
 
 			<div class="p-4 sm:p-8 absolute w-full h-dvh flex flex-col justify-between z-10">
 
-				<div>
-					<H1 size="default"> AMANDA HELMER </H1>
+                <div class="flex-1 flex flex-col justify-center">
+					<H1 size="medium"> AMANDA <br /> HELMER </H1>
+                    <h2 class="mt-4 text-xl sm:text-2xl text-zinc-400 font-sans">
+                        Design that works. Work that inspires.
+                    </h2>
 				</div>
 
 				<div>
