--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
 import H1 from "../components/h1.astro";
-import profileImage from "../assets/amanda-helmer.png";
+import profileImage from "../assets/amanda-helmer.jpg";
 import InfoLayout from "../layouts/InfoLayout.astro";
 ---
 
