--- a/src/layouts/InfoLayout.astro
+++ b/src/layouts/InfoLayout.astro
@@ -11,7 +11,7 @@ const pathname = Astro.url.pathname;
 <RootLayout title={title} description={description}>
 	<div class="flex relative gap-4 w-full max-w-screen-xl">
 		<nav class="relative w-4 md:min-w-2xs xl:min-w-sm sm:min-h-screen sm:ml-4 sm:pb-4">
-            <div class="w-full h-full max-sm:w-4 md:max-w-2xs xl:max-w-sm fixed -z-10 overflow-hidden">
+            <div class="w-full h-full max-sm:w-4 md:max-w-2xs xl:max-w-sm fixed -z-10 overflow-hidden top-0 left-0 sm:rounded-lg sm:mt-8 sm:ml-8 sm:mb-8">
                 <WarpBackground
                         client:load
                 />
