--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,7 @@ import H1 from "../components/h1.astro";
 import InfoLayout from "../layouts/InfoLayout.astro";
 
 // Import your images
-import omniTutorImg from '../assets/omnitutor.jpg';
+import omniTutorImg from '../assets/omni-tutor.jpg';
 
 
 const projects = [
@@ -12,7 +12,7 @@ const projects = [
         title: "OmniTutor",
         description: "AI-powered personalized learning platform adapting to individual student needs.",
         image: omniTutorImg,
-        href: "/projects/omnitutor", // Add project links
+        href: "https://omni-tutor-ai.vercel.app/", // Add project links
     },
     {
         title: "Gig Milage Calculator",
