--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,6 +5,7 @@ import InfoLayout from "../layouts/InfoLayout.astro";
 
 // Import your images
 import omniTutorImg from '../assets/omni-tutor.jpg';
+import gigCalcImg from '../assets/gig-calc.jpg';
 
 
 const projects = [
@@ -17,7 +18,8 @@ const projects = [
     {
         title: "Gig Milage Calculator",
         description: "A web app to track mileage and expenses for gig economy workers.",
-        href: "/projects/gig-mileage", // Add project links
+        image: gigCalcImg,
+        href: "https://gig-earning-calculator.vercel.app/", // Add project links
     },
     {
         title: "Eliminate Collateral Consequences Campaign",
