--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import AvailableForWork from "../components/available.astro";
 			<div class="p-4 sm:p-8 absolute w-full h-dvh flex flex-col justify-between z-10">
 
                 <div class="flex-1 flex flex-col justify-center">
-					<H1 size="medium"> AMANDA <br /> HELMER </H1>
+					<H1 size="large"> AMANDA <br /> HELMER </H1>
                     <h2 class="mt-4 text-xl sm:text-2xl text-zinc-400 font-sans">
                         Design that works. Work that inspires.
                     </h2>
