--- a/src/components/h1.astro
+++ b/src/components/h1.astro
@@ -12,7 +12,7 @@ const { size = "default", className } = Astro.props;
 <h1
         class={clsx(
             "text-zinc-300 font-bold text-balance font-mono",
-            size === "default" && "text-4xl md:text-6xl xl:text-8xl tracking-tighter",
+            size === "default" && "text-6xl md:text-8xl xl:text-9xl tracking-tight",
             size === "large" && "text-8xl md:text-[120px] lg:text-[160px] tracking-tighter",
             size === "medium" && "text-4xl md:text-8xl lg:text-9xl tracking-tighter",
             className,
