--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,9 +16,9 @@ import AvailableForWork from "../components/available.astro";
 
             <div class="space-y-6 sm:space-y-8">
                 <div>
-                    <p class="text-xl sm:text-2xl xl:text-3xl text-zinc-300 text-balance font-medium">
+                    <h2 class="text-xl sm:text-2xl xl:text-3xl text-zinc-300 text-balance font-mono font-medium ">
                         Let's create something remarkable together.
-                    </p>
+                    </h2>
                     <p class="mt-2 text-base sm:text-lg text-zinc-500">
                         Whether you have a project in mind or just want to chat about design, I'd love to hear from you.
                     </p>
@@ -27,7 +27,7 @@ import AvailableForWork from "../components/available.astro";
                 <!-- Primary Contact Methods -->
                 <div class="space-y-6">
                     <div class="space-y-2">
-                        <h2 class="text-sm uppercase tracking-wider text-zinc-600">
+                        <h2 class="text-sm tracking-wider text-zinc-600">
                             Email
                         </h2>
                         <ExternalLink href="mailto:helmeramanda90@gmail.com">
@@ -39,7 +39,7 @@ import AvailableForWork from "../components/available.astro";
                     </div>
 
                     <div class="space-y-2">
-                        <h2 class="text-sm uppercase tracking-wider text-zinc-600">
+                        <h2 class="text-sm tracking-wider text-zinc-600">
                             Phone
                         </h2>
                         <ExternalLink href="tel:+15803607562">
@@ -53,7 +53,7 @@ import AvailableForWork from "../components/available.astro";
 
                 <!-- Social Links -->
                 <div class="pt-6 border-t border-zinc-800">
-                    <h2 class="mb-3 text-sm uppercase tracking-wider text-zinc-600">
+                    <h2 class="mb-3 text-sm tracking-wider text-zinc-600">
                         Connect
                     </h2>
                     <div class="flex flex-wrap gap-4">
