--- a/src/components/available.astro
+++ b/src/components/available.astro
@@ -2,10 +2,8 @@
 const { className } = Astro.props;
 ---
 
-<div class={`flex items-center gap-2 ${className}`}>
-    <span class="relative flex items-center justify-center size-3">
-        <span class="absolute inline-flex h-full w-full animate-ping duration-1000 rounded-full bg-zinc-100 opacity-75"></span>
-        <span class="relative inline-flex size-2 rounded-full bg-zinc-100"></span>
-      </span>
-      <p class="text-zinc-300">Available For Work</p>
+<div class={`flex items-center gap-4 ${className}`}>
+    <span class="relative items-center justify-center size-3"><span class="absolute inline-flex h-full w-full animate-ping duration-1000 rounded-full bg-zinc-400 opacity-75"></span>  </span>
+
+      <b class="inline-flex text-zinc-200 opacity-50"> Available For Work </b>
 </div>
