--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,16 +17,16 @@ import AvailableForWork from "../components/available.astro";
 			</div>
 
 			<div class="p-4 sm:p-8 absolute w-full h-dvh flex flex-col justify-between z-10">
-
+                <AvailableForWork className="py-3" />
                 <div class="flex-1 flex flex-col justify-center">
-					<H1 size="default"> AMANDA <br /> HELMER </H1>
+					<H1 size="default"> A-Typical <br /> DESIGN </H1>
                     <h2 class="mt-4 text-xl sm:text-2xl text-zinc-400 font-sans">
-                        Design that works. Work that inspires.
+                        Different by design.
                     </h2>
 				</div>
 
-				<div>
-					<AvailableForWork className="py-4" />
+
+
 					<div class="mb-2 sm:mb-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 sm:gap-0">
 						<div class="flex flex-wrap items-center gap-2 sm:gap-4">
 							<Link href="#">Book a call</Link>
@@ -39,7 +39,7 @@ import AvailableForWork from "../components/available.astro";
 							<Link href="/contact" variant="secondary">Contact</Link>
 						</Navigation>
 					</div>
-				</div>
+				
 			</div>
 		</div>
 	</main>
